# ofxDailyPractice

./: .gitignore
RYBj/: RYBj.sln  RYBj.vcxproj  RYBj.vcxproj.filters
RYBj/src/: interface.h  ofApp.cpp  ofApp.h
RYBk/: RYBk.sln  RYBk.vcxproj  RYBk.vcxproj.filters  addons.make
RYBk/src/: Apc40mk2.cpp  Apc40mk2.h  interface.h  ofApp.cpp  ofApp.h  palette.cpp  palette.h
RYBn/: RYBn.sln  RYBn.vcxproj  RYBn.vcxproj.filters
RYBn/src/: Apc.cpp  Apc.h  ApcControls.h  ofApp.cpp  ofApp.h
RYBr/: RYBr.sln  RYBr.vcxproj  RYBr.vcxproj.filters
RYBr/src/: Cell.h  Grid.h  RYBr14.h  RYBr17.h  RYBr21.h  ofApp.cpp  ofApp.h
RYBs/: RYBs.sln  RYBs.vcxproj  RYBs.vcxproj.filters
RYBs/src/: RYBs23.cpp  main.cpp  ofApp.cpp  ofApp.h
RYBu1_7/: RYBu1_7.sln  RYBu1_7.vcxproj  RYBu1_7.vcxproj.filters  addons.make
RYBu1_7/src/: JzAzBzColor.cpp  JzAzBzColor.h  boid.cpp  boid.h  constants.h  magicdust.cpp  magicdust.h  main.cpp  ofApp.cpp  ofApp.h
RYBy1_7/: RYBy1_7.sln  RYBy1_7.vcxproj  RYBy1_7.vcxproj.filters  addons.make
RYBy1_7/src/: JzAzBzColor.cpp  JzAzBzColor.h  UtilsFromSo.h  main.cpp  ofApp.cpp  ofApp.h
colorspacejam/: colorspacejam.sln  colorspacejam.vcxproj  colorspacejam.vcxproj.filters
colorspacejam/src/: CIEColor.cpp  CIEColor.h  JzAzBzColor.cpp  JzAzBzColor.h  ofApp.cpp  ofApp.h
daily/: Cargo.toml
daily/src/: colors.rs  cpp.rs  error.rs  main.rs  normal.h.tmpl  vs.rs
greeble-demo/: Cargo.toml  settings.json
greeble-demo/src/: main.rs  settings.rs
greeble-demo/src/jzazbz/: mod.rs
greeble-demo/src/jzazbz/settings/: deserialize.rs  mod.rs  serialize.rs
(+21 files in other folders)
