[package]
name = "daily"
version = "0.1.0"
authors = ["Grayson Hay <me@russellhay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artcode = "~1"
structopt = "0.3.14"
chrono = "0.4.11"
rand = "0.7.3"
lazy_static = "1.4.0"
pathsep = "0.1"
